# Units

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PiSubmarine.Build.CMake.cmake  vcpkg.json
public/PiSubmarine/: Amperes.h  Angles.h  AngularSector.h  Celcius.h  Celsius.h  Charge.h  Coulombs.h  Hertz.h  Meters.h  NormalizedFraction.h  NormalizedIntFraction.h  Pascals.h  Radians.h  SignedNormalizedFraction.h  Volts.h  Watts.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/PiSubmarine/: AmpereHoursTest.cpp  AmperesTest.cpp  AngularSectorTest.cpp  CelciusTest.cpp  CelsiusTest.cpp  CoulombsTest.cpp  DegreesTest.cpp  HertzTest.cpp  MetersTest.cpp  NormalizedFractionTest.cpp  NormalizedIntFractionTest.cpp  PascalsTest.cpp  RadiansTest.cpp  SignedNormalizedFractionTest.cpp  UnitsTest.cpp  VoltsTest.cpp  WattsTest.cpp
